fix overflow hiding active stories category underline

--- a/source/sass/modules/_taxi.scss
+++ b/source/sass/modules/_taxi.scss
@@ -8,6 +8,7 @@
     align-items: center;
     white-space: nowrap;
     overflow: auto;
+    padding-bottom: 1px;
 }
 .taxi__cat {
     position: relative;
